Creates entity models

--- a/database/dockerfile
+++ b/database/dockerfile
@@ -1,6 +1,6 @@
 FROM mysql:latest
 
-LABEL name="Skills Management Database" version="1.0"
+LABEL name="Team Makr Database" version="1.0"
 
 COPY database.sql /docker-entrypoint-initdb.d/
 
@@ -8,7 +8,7 @@ EXPOSE 3306
 
 ENV MYSQL_ROOT_PASSWORD '1234'
 
-ENV MYSQL_DATABASE 'skills_management'
+ENV MYSQL_DATABASE 'team_makr'
 
 ENV MYSQL_USER 'wilson'
 
