--- a/API/team-makr-api/tsconfig.json
+++ b/API/team-makr-api/tsconfig.json
@@ -10,6 +10,9 @@
       "outDir": "./build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
+      "sourceMap": true,
+      "removeComments": true,
+      "importHelpers": true,
+      "forceConsistentCasingInFileNames": true
    }
 }
