--- a/team-makr-api/package.json
+++ b/team-makr-api/package.json
@@ -15,13 +15,14 @@
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
-      "morgan": "^1.10.0",
       "mysql2": "^2.3.2",
       "passport": "^0.5.0",
       "passport-http-bearer": "^1.0.1",
       "passport-local": "^1.0.0",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.38"
+      "typeorm": "0.2.38",
+      "winston": "^3.3.3",
+      "winston-mysql": "^1.1.1"
    },
    "scripts": {
       "generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n team-makr -p",
