--- a/team-makr-api/package.json
+++ b/team-makr-api/package.json
@@ -21,6 +21,7 @@
       "passport-local": "^1.0.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.38",
+      "uuid": "^8.3.2",
       "winston": "^3.3.3",
       "winston-mysql": "^1.1.1"
    },
