--- a/team-makr-api/package.json
+++ b/team-makr-api/package.json
@@ -16,6 +16,7 @@
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
       "mysql2": "^2.3.2",
+      "nodemailer": "^6.7.0",
       "passport": "^0.5.0",
       "passport-http-bearer": "^1.0.1",
       "passport-local": "^1.0.0",
