--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
